--- a/spellcheck.html
+++ b/spellcheck.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+  <h3>Github</h3>
 <label>Text area: (spellcheck on) <textarea name="comments"
 spellcheck="true">There is a tyyypooo here. Did the browser spot it?
 </textarea></label>
